# bombaklad

./: CMakeLists.txt  WaveFunctions.h  fragment_shader.frag  main.cpp  vertex_shader.vert
assets/shaders/: fragment_shader.frag
src/: Utils.h  WaveFunctions.h  main.___
src/shaders/: ShaderLoader.cpp  ShaderLoader.h  papershader.frag  sunshaper.frag  waveshaper.frag  waveshaper.vert
src/shapes/: TheSun.cpp  TheSun.h  Wave.cpp  Wave.h
